fix sponsors on mobile (i wanna die it took 3 hours and the solution was 2 lines long)

--- a/source/assets/stylesheets/main.css
+++ b/source/assets/stylesheets/main.css
@@ -49,11 +49,6 @@ body {
   padding-right: 15px;
 }
 
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-
 .large-header {
   line-height: 90%;
   margin-bottom: 20px;
@@ -70,13 +65,13 @@ body {
   margin-bottom: 30px;
 }
 
-.center {
-  margin-right: auto;
-  margin-left: auto;
-}
-
 .about-block {
   margin-bottom: 20px;
+}
+
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .sponsorlogo {
@@ -91,6 +86,12 @@ body {
 .sponsorabout {
   margin-left: 50px;
   margin-right: 50px;
+  min-width: 600px;
+}
+
+.center {
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container-marketing {
